# MCP-POC

./: .env.example  README.md  pyproject.toml  requirements.txt  run.py
scripts/: HOW_TO_RUN_TOOLS.md  __init__.py  client_helper.py  list_tools.py  mcp_repl.py  mcp_streamlit_ui.py
src/playwright_mcp/: __init__.py  main.py  scrape_url.py
src/playwright_mcp/browser/: __init__.py  lifecycle.py  state.py
src/playwright_mcp/config/: __init__.py  settings.py
src/playwright_mcp/logging_/: __init__.py  setup.py
src/playwright_mcp/schemas/: __init__.py  interaction.py  navigation.py  scraping.py  screenshots.py
src/playwright_mcp/server/: __init__.py  app.py  dependencies.py  ui.py
src/playwright_mcp/tools/: __init__.py  interaction.py  navigation.py  scraping.py  screenshots.py
tests/: __init__.py  conftest.py  test_schemas.py  test_tools.py
